website set up completed

--- a/htmlElements/metaInfo/head.html
+++ b/htmlElements/metaInfo/head.html
@@ -39,7 +39,7 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported</p><a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">global</a>
     
 </body>
 </html>
