--- a/htmlEventAttributes/htmlEventAttributes.html
+++ b/htmlEventAttributes/htmlEventAttributes.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Html Attributes</title>
+
+    <title>HTML Event Attributes</title>
 </head>
-
-<!--https://www.w3schools.com/tags/ref_byfunc.asp-->
 <body>
-
-
+    <h1>Html Event Attributes</H1>
+    
 </body>
-</html>
