--- a/htmlEventAttributes/mediaEventAttributes/mediaEventAttributes.html
+++ b/htmlEventAttributes/mediaEventAttributes/mediaEventAttributes.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Styling(CSS)</title>
-</head>
 
-<!--The link for the majority of the html aspects that are to be covered. HTML Reference navbar:
-    https://www.w3schools.com/tags/ref_byfunc.asp-->
+    <title>Media Event Attributes</title>
+</head>
 <body>
+    <h1>Media Event Attributes</h1>
     
 </body>
 </html>
