--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="media/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="0media/favicons/favicon.ico">
 
     <title>Index</title>
 </head>
 
 <!--The link for the majority of the html aspects that are to be covered. HTML Reference navbar:
-    https://www.w3schools.com/tags/ref_byfunc.asp-->
+    https://www.w3schools.com/tags/ref_byfunc.asp -->
 <body>
     <h1>Website progression</h1>
 
     <nav>
         <a href="./htmlElements/htmlElements.html">Html Elements</a>
-        <a href="./htmlAttributes/htmlAttributes.html">Html Attributes</a>     
+        <span>||</span>
+        <a href="./htmlGlobalAttributes/htmlGlobalAttributes.html">Html Global Attributes</a>
+        <span>||</span>
+        <a href="./htmlEventAttributes/htmlEventAttributes.html">Html Event Attributes</a>  
     </nav>
 
     <p>The progression of the website follows as:</p>
@@ -25,6 +28,8 @@
     <li>Explore styling all of these elements with css.</li>
     <li>Explore the basics of HTML canvas and HTML audio/video</li>
     <li>Explore integrating javascript into the website.</li>
+    <li>Things that ive learnt are logged in a blog fashion throughout the process:</li>
+    <p><a href="./lessonsLearned.html">Lessons Learned</a></p>
 
 </body>
 </html>
