--- a/lessonsLearned.html
+++ b/lessonsLearned.html
@@ -8,26 +8,59 @@
     <title>Lessons Learned</title>
 </head> 
 <body>
-    <h1>html:5 thing</h1>
-    <h1>Comments</h1>
-    <h1>css- inline internal and external</h1>
-    <h1>Favicons</h1>
-    <h1>Block and inline</h1>
-    <h1>Importance of class and id attributes</h1>
-    <h1>File paths</h1>
-    <h1>Layout elements</h1>
-    <h1>Responsive Web design</h1>
-    <h1>Semantic elements</h1>
-    <h1>Style guides</h1>
-    <h1>Character entities, symbols and emojis!</h1>
-    <h1>XHTML ??</h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
+    <h1>Lessons Learned</h1>
+    <div>
+        <h2>html:5 thing</h2>
+        <p></p>
+    </div>
+    <div>
+        <h2>Comments</h2></div>
+        <p></p>
+    <div>
+        <h2>css- inline internal and external</h2></div>
+        <p></p>
+    <div>
+        <h2>Favicons</h2></div>
+        <p></p>
+    <div>
+        <h2>Block and inline</h2></div>
+        <p></p>
+    <div>
+        <h2>Importance of class and id attributes</h2></div>
+        <p></p>
+    <div>
+        <h2>File paths</h2></div>
+        <p></p>
+    <div>
+        <h2>Layout elements</h2></div>
+        <p></p>
+    <div>
+        <h2>Responsive Web design</h2></div>
+        <p></p>
+    <div>
+        <h2>Semantic elements</h2></div>
+        <p></p>
+    <div>
+        <h2>Style guides</h2></div>
+        <p></p>
+    <div>
+        <h2>Character entities, symbols and emojis!</h2></div>
+        <p></p>
+    <div>
+        <h2>XHTML ??</h2></div>
+        <p></p>
+    <div>
 
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
 
     
 </body>
