--- a/htmlElements/metaInfo/base.html
+++ b/htmlElements/metaInfo/base.html
@@ -76,9 +76,10 @@
     <br>
 
     <h2>Attributes:</h2>
+    <p>The global attributes are supported</p><a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">global</a>
     <p>The href attribute is used to supply the base elements url for all relative urls!</p>
     <p>The target attribute is used to supply targets for the hyperlinks and forms in the page! _blank, _parent, _self, _top.</p>
-    <p>The global attributes are supported</p>
+    
     
 </body>
 </html>
