--- a/htmlElements/metaInfo/head.html
+++ b/htmlElements/metaInfo/head.html
@@ -29,17 +29,19 @@
 
     <h2>Examples:</h2>
     <p>This is the head element for this webpage</p>
-    <img src="media/images/examples/headExample.jpg">
+    <img src="./media/images/examples/headExample.jpg">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="media/images/defaultStyles/headDefault.jpg"></img>
+    <img src="./media/images/defaultStyles/headDefault.jpg"></img>
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attributes are supported</p><a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">global</a>
+    <p>The global attribute is supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
     
 </body>
 </html>
