--- a/htmlElements/metaInfo/meta.html
+++ b/htmlElements/metaInfo/meta.html
@@ -35,16 +35,16 @@
     <p>There is a method that allows web designers to take control of the viewport. The view port is the visible area of a webpage.</p>
     <p>The viewport varies with the device and it will be smaller on mobile phones than on a computer display.</p>
     <p>It can be very usefull to add the following meta tag into all of your webpages in order to have a responsive web design.(suiting all sizes of screens)</p>
-    <img src="media/images/examples/viewPortExample.jpg">
+    <img src="./media/images/examples/viewPortExample.jpg">
     <p>The width part of the contents sets the width of the page to follow the current devices screen width.</p>
     <p>The initial scale part sets the initial zoom level when the page is first loaded.</p>
     <p>The following image shows the difference:</p>
-    <img src="media/images/examples/viewPortDifferenceExample.jpg">
+    <img src="./media/images/examples/viewPortDifferenceExample.jpg">
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="media/images/examples/metaExample.jpg">
+    <img src="./media/images/examples/metaExample.jpg">
 
     <br>
 
@@ -54,7 +54,9 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attribute is supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
     <p>The charset attribute is supported to specify the character endcoding for the document. This is always utf-8 for html5 documents.</p>
     <p>The content attribute is supported which is used to specify the text value associated with this meta tags use</p>
     <p>The http-equiv attribute is used to provide a HTTP header for the information/value of the content attribute. Allowed values are all HTTP headers</p>
