--- a/htmlElements/tables/table.html
+++ b/htmlElements/tables/table.html
@@ -53,12 +53,12 @@
         </tfoot>
     </table>   
     <p>This is how its coded:</p>
-    <img src="media/examples/tableExample.png">
+    <img src="./media/examples/tableExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="media/defaultStyles/tableDefault.png">
+    <img src="./media/defaultStyles/tableDefault.png">
 
     <br>
 
