--- a/htmlElements/metaInfo/base.html
+++ b/htmlElements/metaInfo/base.html
@@ -66,7 +66,7 @@
         </tr>
     </table>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/">
+    <img src="http://127.0.0.1:5500/htmlElements\metaInfo\media\images\examples\baseExample.png">
 
     <br>
 
@@ -76,7 +76,9 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attributes are supported</p><a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">global</a>
+    <p>The global attribute is supported. 
+        <a href="htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
     <p>The href attribute is used to supply the base elements url for all relative urls!</p>
     <p>The target attribute is used to supply targets for the hyperlinks and forms in the page! _blank, _parent, _self, _top.</p>
     
