html event attributes set up

--- a/htmlEventAttributes/dragEventAttributes/dragEventAttributes.html
+++ b/htmlEventAttributes/dragEventAttributes/dragEventAttributes.html
@@ -10,5 +10,190 @@
 <body>
     <h1>Drag Event Attributes</h1>
     
+    <details>
+        <summary><b>ondrag</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ondragend</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ondragcenter</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ondragleave</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ondragover</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ondragstart</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ondrop</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onscroll</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    
 </body>
 </html>
