--- a/htmlEventAttributes/formEventAttributes/formEventAttributes.html
+++ b/htmlEventAttributes/formEventAttributes/formEventAttributes.html
@@ -10,5 +10,236 @@
 <body>
     <h1>Form Event Attributes</h1>
     
+    <details>
+        <summary><b>onblur</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onchange</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>oncontextmenu</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onfocus</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>oninput</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>oninvalid</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onreset</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onsearch</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onselect</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onsubmit</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+
 </body>
 </html>
