--- a/htmlEventAttributes/htmlEventAttributes.html
+++ b/htmlEventAttributes/htmlEventAttributes.html
@@ -10,4 +10,14 @@
 <body>
     <h1>Html Event Attributes</H1>
     
+        <nav>
+            <a href="./clipboardEventAttributes/clipboardEventAttributes.html">Clipboard event attributes</a>
+            <a href="./dragEventAttributes/dragEventAttributes.html">Drag event Attributes</a>
+            <a href="./formEventAttributes/formEventAttributes.html">Form event attributes</a>
+            <a href="./keyboardEventAttributes/keyboardEventAttributes.html">Keyboard event attributes</a>
+            <a href="./mediaEventAttributes/mediaEventAttributes.html">Media event attributes</a>
+            <a href="./mouseEventAttributes/mouseEventAttributes.html">Mouse event attributes</a>
+            <a href="./miscEventAttributes/miscEventAttributes.html">Misc event attributes</a>
+        </nav>
+
 </body>
