--- a/htmlEventAttributes/mediaEventAttributes/mediaEventAttributes.html
+++ b/htmlEventAttributes/mediaEventAttributes/mediaEventAttributes.html
@@ -10,5 +10,536 @@
 <body>
     <h1>Media Event Attributes</h1>
     
+    <details>
+        <summary><b>onabort</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>oncanplay</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>oncanplaythrough</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>oncuechange</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ondurationchange</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onemptied</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onended</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onerror</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onloadeddata</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onloadedmetadata</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onloadstart</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onpause</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onplay</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onplaying</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onprogress</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onratechange</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onseeked</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onseeking</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onstalled</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onsuspend</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>ontimeupdate</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onvolumechange</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>onwaiting</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    
+
 </body>
 </html>
