--- a/htmlEventAttributes/miscEventAttributes/miscEventAttributes.html
+++ b/htmlEventAttributes/miscEventAttributes/miscEventAttributes.html
@@ -9,5 +9,29 @@
 </head>
 <body>
     <h1>Misc Event Attributes</h1>
+
+    <details>
+        <summary><b>ontoggle</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
 </body>
 </html>
