--- a/lessonsLearned.html
+++ b/lessonsLearned.html
@@ -12,6 +12,7 @@
     <div>
         <h3>Navigating through website structure using href attribute</h3>
 
+        <img src="0media/images/websiteStructure.png" style="height: 700px;">
         <p>As ive been coding my website ive been using the "./"" to navigate to my media folders to display images. This is a relative path. A relative path is one that starts from
             the current directory. For example the current directory of the audio.html file is "htmlElements\audioAndVideo". In order to get to the media folder 
             to display an image i would need to use the relative path "./media". This accesses the current relative directory to the "htmlElements\audioAndVideo" so that i can 
